# Datathon-FIAP

./: .dockerignore  .gitignore  Dockerfile  README-anotacao.md  README.md  README_mlops.md  docker-compose.llm.yaml  docker-compose.yaml  dvc.yaml  env_example  main.py  params.yaml  prepare_data.py  pyproject.toml
.claude/: mcp.json
.github/workflows/: tests.yml
config/: airflow.cfg
dags/: dag_treinamento_lstm.py  dag_treinamento_modular.py  drift_detection.py
docs/: architecture_llm_rag_mcp.md
fast_api/: main.py
grafana/provisioning/dashboards/: d_mlflow_dashboard.json  dashboards.yaml  docker_dashboard.json  mlflow_dashboard.json
grafana/provisioning/datasources/: dashboards.yaml  datasources.yaml
notebooks/: 01_eda_nike.ipynb
prometheus/: prometheus.yml
src/: data_loader.py  logger_config.py  main.py  mcp_server.py  mlflow_utils.py  model_registry.py  prepare_data.py  preprocessing.py  train.py
src/api/: Dockerfile  app.py  llm_service.py  rag_service.py  schema.py  service.py
src/inference/: inference.py
tests/: conftest.py  test_api_endpoints.py  test_api_schema.py  test_api_service.py  test_llm_service.py  test_mcp_server.py  test_rag_service.py
